projects/compiler/test/typechecker/typedecl/error_duplicate_field.out
Error at %FILE_NAME%:4:3
Duplicate name 'a'
  |    a: String
       ^
This name is also declared at (2:3)
  |    a: Int
       ^
